--- a/recipes/pizzasauce.html
+++ b/recipes/pizzasauce.html
@@ -8,6 +8,7 @@
 
 <body>
     <h1>Pizza Sauce</h1>
+    <img src="./images/pizzasauce.png">
 <ul>
     <li>1(15oz can) Tomatoes*</li>
     <li>1 (6oz can) Tomato Paste</li>
