Add all three recipes and link to home page.

--- a/recipes/pizzasauce.html
+++ b/recipes/pizzasauce.html
@@ -9,6 +9,7 @@
 <body>
     <h1>Pizza Sauce</h1>
     <img src="./images/pizzasauce.png">
+    <h2>Ingredients</h2>
 <ul>
     <li>1(15oz can) Tomatoes*</li>
     <li>1 (6oz can) Tomato Paste</li>
@@ -18,7 +19,8 @@
     <li>1 tsp Sugar</li>
     <li>Splash of Olive Oil</li>
 </ul>
-    <p>In a medium bowl, stir tomatoes and tomato paste until smooth. Add remaining<br>
+<h2>Steps</h2>
+    <p>In a medium bowl, stir tomatoes and tomato paste until smooth.<br> Add remaining
     ingredients and stir well.</p>
     
     <p><em>*Cento San Marzano Peeled Tomatoes preferred.</em></p>
