--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 
 <body>
     <h1>Odin Recipes</h1>
-
-    <a href="./recipes/pizzasauce.html">Pizza Sauce</a>
-
-
+<ul>
+   <li><a href="./recipes/pizzasauce.html">Pizza Sauce</a></li>
+   <li><a href="./recipes/tacoseasoning.html">Taco Seasoning</a></li>
+   <li><a href="./recipes/salsa.html">Salsa</a></li>
+</ul>
 </body>
 </html>
