Update all three recipes with descriptions

--- a/recipes/pizzasauce.html
+++ b/recipes/pizzasauce.html
@@ -9,6 +9,9 @@
 <body>
     <h1>Pizza Sauce</h1>
     <img src="./images/pizzasauce.png">
+    <h2>Description</h2>
+This versatile Italian tomato sauce is great for both<br>
+pizza and spaghetti. 
     <h2>Ingredients</h2>
 <ul>
     <li>1(15oz can) Tomatoes*</li>
