--- a/recipes/salsa.html
+++ b/recipes/salsa.html
@@ -9,6 +9,9 @@
 <body>
     <h1>Salsa</h1>
     <img src="./images/salsa.png">
+    <h2>Description</h2>
+This is a medium heat, delicious salsa. If you have the means, <br>
+I highly recommend freshy heated tortilla chips. 
     <h2>Ingredients</h2>
     
 <ul>
