--- a/recipes/tacoseasoning.html
+++ b/recipes/tacoseasoning.html
@@ -9,6 +9,9 @@
 <body>
     <h1>Taco Seasoning</h1>
     <img src="./images/tacoseasoning.png">
+<h2>Description</h2>
+This is a medium heat, all-purpose Mexican seasoning that<br>
+is great for groundbeef or beans. 
     <h2>Ingredients</h2>
 <ul>
     <li>2 TBS Chili Powder</li>
