--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="./styles.css"
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <Title>Odin Recipes</Title>
+    <Title>Palmer Recipes</Title>
 </head>  
 
 <body>
-    <h1>Odin Recipes</h1>
+    <div><h1>Palmer Recipes</h1></div>
 <ul>
    <li><a href="./recipes/pizzasauce.html">Pizza Sauce</a></li>
    <li><a href="./recipes/tacoseasoning.html">Taco Seasoning</a></li>
