Remove css data and update meta to include browser info

--- a/recipes/salsa.html
+++ b/recipes/salsa.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <Title>Salsa</Title>
 </head>  
@@ -30,7 +31,7 @@ I highly recommend freshy heated tortilla chips.
     processor along with other ingredients. 
     <br>
     <br>
-    Pulse blend desired consistency.
+    Pulse blend to desired consistency.
     </p>
 
 
