--- a/index.html
+++ b/index.html
@@ -1,18 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="./styles.css"
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <Title>Palmer Recipes</Title>
 </head>  
 
 <body>
-    <div><h1>Palmer Recipes</h1></div>
+    <h1>Palmer Recipes</h1>
+
 <ul>
    <li><a href="./recipes/pizzasauce.html">Pizza Sauce</a></li>
    <li><a href="./recipes/tacoseasoning.html">Taco Seasoning</a></li>
    <li><a href="./recipes/salsa.html">Salsa</a></li>
 </ul>
+
 </body>
+
 </html>
